# tauriApp

./: .gitignore  components.json  notification.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  NotificationApp.tsx  notification.tsx
src-tauri/: .env  .gitignore  Cargo.toml  reminders.db  tauri.conf.json
src-tauri/migrations/2024-04-13-145129_create_reminders/: down.sql  up.sql
src-tauri/migrations/2024-04-15-090806_change_table_to_have_snoozed_due/: up.sql
src-tauri/src/: background_service.rs  db.rs  main.rs  reminders_subscribe.rs
src-tauri/src/db/: database.rs  models.rs  queries.rs  schema.rs
src/api/: index.ts
src/components/pages/: HomePage.tsx  NotificationPage.tsx
src/components/remindersTable/: columns.tsx  data-table.tsx
src/components/shadcn/ui/: checkbox.tsx
src/state/: remindersState.tsx
src/supabase/: index.ts
src/types/: Reminder.tsx
